--- a/src/app/modules/arena/pages/arena-tournament/arena-tournament.component.html
+++ b/src/app/modules/arena/pages/arena-tournament/arena-tournament.component.html
@@ -37,7 +37,7 @@
                                            class="custom-skeleton"></ngx-skeleton-loader>
                       {{ 'ArenaPauseText' | translate }}
                       <button (click)="arenaStart()"
-                              class="ms-50 btn btn-sm btn-relief-warning">{{ 'Start' | translate }}
+                              class="ms-50 btn btn-sm btn-warning">{{ 'Start' | translate }}
                       </button>
                     </h4>
                   </ngb-alert>
@@ -49,7 +49,7 @@
                     <h4 class="alert-heading animate">
                       {{ 'ArenaStartText' | translate }}
                       <button (click)="arenaPause()"
-                              class="ms-50 btn btn-sm btn-relief-success">{{ 'Pause' | translate }}
+                              class="ms-50 btn btn-sm btn-success">{{ 'Pause' | translate }}
                       </button>
                     </h4>
                   </ngb-alert>
