--- a/src/app/modules/contests/pages/contest/contest-questions/contest-questions.component.html
+++ b/src/app/modules/contests/pages/contest/contest-questions/contest-questions.component.html
@@ -57,7 +57,7 @@
                   </div>
                 </div>
               </div>
-              <button (click)="submit()" class="btn btn-relief-primary btn-sm">
+              <button (click)="submit()" class="btn btn-primary btn-sm">
                 {{ 'Submit' | translate }}
               </button>
             </div>
