--- a/src/app/modules/contests/pages/user-contests/contest-create/contest-create.component.html
+++ b/src/app/modules/contests/pages/user-contests/contest-create/contest-create.component.html
@@ -146,7 +146,7 @@
             </div>
 
             <div class="card-footer text-center">
-              <button (click)="createContest()" class="btn btn-relief-primary round">
+              <button (click)="createContest()" class="btn btn-primary round">
                 {{ 'Create' | translate }}
               </button>
             </div>
