--- a/src/app/modules/contests/pages/user-contests/user-contests.component.html
+++ b/src/app/modules/contests/pages/user-contests/user-contests.component.html
@@ -11,7 +11,7 @@
               [customContent]="true"
               [purchaseUrl]="'contests/purchase-create/'"
               [value]="5">
-              <button class="mb-2 btn btn-relief-primary">{{ 'Create' | translate }}</button>
+              <button class="mb-2 btn btn-primary">{{ 'Create' | translate }}</button>
             </kepcoin-spend-swal>
           </div>
           @if (contests.length == 0 && !isLoading) {
