--- a/src/app/modules/courses/pages/course/course-reviews/reviews.component.html
+++ b/src/app/modules/courses/pages/course/course-reviews/reviews.component.html
@@ -74,7 +74,7 @@
               </span>
             </div>
           </quill-editor>
-          <button (click)="submit()" class="mt-2 mb-2 btn btn-relief-primary">
+          <button (click)="submit()" class="mt-2 mb-2 btn btn-primary">
             {{ 'SUBMIT' | translate }}
           </button>
         </div>
