--- a/src/app/modules/home/activity-section/activity-section.component.html
+++ b/src/app/modules/home/activity-section/activity-section.component.html
@@ -80,11 +80,11 @@
       </ul>
     </div>
     <div class="card-footer d-flex justify-content-between">
-      <button (click)="loadStatistics(fromNow+1);" class="btn btn-sm btn-relief-primary round">
+      <button (click)="loadStatistics(fromNow+1);" class="btn btn-sm btn-primary round">
         <i data-feather="arrow-left"></i>
       </button>
       @if (fromNow > 0) {
-        <button (click)="loadStatistics(fromNow-1);" class="btn btn-sm btn-relief-primary round">
+        <button (click)="loadStatistics(fromNow-1);" class="btn btn-sm btn-primary round">
           <i data-feather="arrow-right"></i>
         </button>
       }
