--- a/src/app/modules/problems/pages/study-plan/study-plan.component.html
+++ b/src/app/modules/problems/pages/study-plan/study-plan.component.html
@@ -208,7 +208,7 @@
                     [purchaseUrl]="'study-plans/' + studyPlan.id + '/purchase/'"
                     (success)="purchaseSuccess()"
                     [value]="studyPlan.kepcoinValue">
-                    <button class="ms-1 mt-2 text-white btn btn-relief-success btn-sm">
+                    <button class="ms-1 mt-2 text-white btn btn-success btn-sm">
                       {{ 'Purchase' | translate }}
                     </button>
                   </kepcoin-spend-swal>
