--- a/src/app/modules/courses/pages/course-lesson/lesson.component.html
+++ b/src/app/modules/courses/pages/course-lesson/lesson.component.html
@@ -68,7 +68,7 @@
                   </div>
                   <div class="tour-step-6">
                     <button ngbTooltip="{{ 'COURSES.DISCUSSION' | translate }}" (click)="toogleCommentsButton()"
-                            class="btn report-button round  btn-relief-primary">
+                            class="btn report-button round  btn-primary">
                       <i data-feather="message-circle" [size]="16"></i>
                     </button>
                   </div>
