--- a/src/app/modules/problems/components/problem-body/problem1631/problem1631.component.html
+++ b/src/app/modules/problems/components/problem-body/problem1631/problem1631.component.html
@@ -1,7 +1,7 @@
 <button
   #mustbeclicked
   (click)="onClick()"
-  class="btn btn-relief-primary"
+  class="btn btn-primary"
   disabled
   id="mustbeclicked">
   Click
