--- a/src/app/modules/challenges/pages/challenge/question-card/question-card.component.html
+++ b/src/app/modules/challenges/pages/challenge/question-card/question-card.component.html
@@ -123,7 +123,7 @@
           -
         }
         <hr>
-        <div class="d-flex gap-2">
+        <div class="d-flex gap-2" style="flex-wrap: wrap;">
           @for (option of orderingOptionList; track $index) {
             <span (click)="moveToOrderingList($index)" class="badge cursor-pointer bg-chapter-{{ question.chapter.id }}">
               {{ option }}
