refactoring | projects module

--- a/src/app/modules/contests/pages/contest/contest-questions/contest-question-card/contest-question-card.component.html
+++ b/src/app/modules/contests/pages/contest/contest-questions/contest-question-card/contest-question-card.component.html
@@ -9,7 +9,7 @@
     <div class="time">
       <span class="badge me-50" [class]="{
         'bg-primary': question.status == 0,
-        'badge-warning': question.status == 1,
+        'bg-warning': question.status == 1,
         'bg-success': question.status == 2,
         'bg-danger': question.status == 3
       }"> {{ question.statusTitle }}</span>
