--- a/src/app/styles/primeng-sass/theme-base/components/misc/_badge.scss
+++ b/src/app/styles/primeng-sass/theme-base/components/misc/_badge.scss
@@ -22,7 +22,7 @@
     color: $infoButtonTextColor;
   }
 
-  &.p-badge-warning {
+  &.p-bg-warning {
     background-color: $warningButtonBg;
     color: $warningButtonTextColor;
   }
