--- a/src/app/modules/projects/pages/project/project-attempts/attempts-table/attempts-table.component.html
+++ b/src/app/modules/projects/pages/project/project-attempts/attempts-table/attempts-table.component.html
@@ -1,15 +1,15 @@
 <div class="table-responsive">
   <table class="table">
     <thead>
-    <tr class="bg-gradient-info">
-      <th class="th-content">ID</th>
-      <th class="th-content">{{ 'Submitted' | translate }}</th>
-      <th class="th-content">{{ 'Technology' | translate }}</th>
-      <th class="th-content">{{ 'User' | translate }}</th>
-      <th class="th-content">{{ 'Problem' | translate }}</th>
-      <th class="th-content">{{ 'Verdict' | translate }}</th>
-      <th class="th-content">{{ 'Time' | translate }}</th>
-      <th class="th-content">{{ 'Memory' | translate }}</th>
+    <tr>
+      <th>ID</th>
+      <th>{{ 'Submitted' | translate }}</th>
+      <th>{{ 'Technology' | translate }}</th>
+      <th>{{ 'User' | translate }}</th>
+      <th>{{ 'Problem' | translate }}</th>
+      <th>{{ 'Verdict' | translate }}</th>
+      <th>{{ 'Time' | translate }}</th>
+      <th>{{ 'Memory' | translate }}</th>
       <th></th>
     </tr>
     </thead>
@@ -44,9 +44,9 @@
             <span class="badge badge-glow" [ngClass]="{
             'bg-info': attempt.verdict == 1 && attempt.kepcoins > 0 && attempt.kepcoins != attempt.projectKepcoins,
             'bg-success': attempt.verdict == 1 && attempt.kepcoins > 0 && attempt.kepcoins == attempt.projectKepcoins,
-            'badge-warning': attempt.verdict == 1 && attempt.kepcoins == 0,
+            'bg-warning': attempt.verdict == 1 && attempt.kepcoins == 0,
             'bg-primary': attempt.verdict == -2,
-            'badge-blue': attempt.verdict == -1,
+            'bg-blue': attempt.verdict == -1,
             'bg-danger': attempt.verdict == 0
           }">
               {{ attempt.verdictTitle }}
@@ -82,14 +82,14 @@
     </tbody>
     <tfoot>
     <tr>
-      <th class="th-content">ID</th>
-      <th class="th-content">{{ 'Submitted' | translate }}</th>
-      <th class="th-content">{{ 'Technology' | translate }}</th>
-      <th class="th-content">{{ 'User' | translate }}</th>
-      <th class="th-content">{{ 'Problem' | translate }}</th>
-      <th class="th-content">{{ 'Verdict' | translate }}</th>
-      <th class="th-content">{{ 'Time' | translate }}</th>
-      <th class="th-content">{{ 'Memory' | translate }}</th>
+      <th>ID</th>
+      <th>{{ 'Submitted' | translate }}</th>
+      <th>{{ 'Technology' | translate }}</th>
+      <th>{{ 'User' | translate }}</th>
+      <th>{{ 'Problem' | translate }}</th>
+      <th>{{ 'Verdict' | translate }}</th>
+      <th>{{ 'Time' | translate }}</th>
+      <th>{{ 'Memory' | translate }}</th>
       <th></th>
     </tr>
     </tfoot>
@@ -102,7 +102,7 @@
       <kep-icon name="file-sheet" type="duotone"/>
       Log
     </h5>
-    <button type="button" class="btn-close" (click)="modal.dismiss('Cross click')" aria-label="Close">
+    <button (click)="modal.dismiss('Cross click')" aria-label="Close" class="btn-close" type="button">
 
     </button>
   </div>
@@ -110,28 +110,29 @@
     @if (logs.log) {
       <pre *ngIf="logs.log" [innerHTML]="logs.log"></pre>
     }
-    <div class="accordion collapse-margin">
-      <!--      <ngb-accordion [destroyOnHide]="false" [closeOthers]="true">-->
-      <!--        @for (log of logs.tasks; track log; let i = $index) {-->
-      <!--          <ngb-panel id="panelMargin{{ i }}" [cardClass]="'collapse-margin'">-->
-      <!--            <ng-template ngbPanelTitle>-->
-      <!--              <span>-->
-      <!--                {{ log.taskNumber }}. {{ log.taskTitle }}-->
-      <!--                @if (log.done === true) {-->
-      <!--                  <kep-icon name="check-square" color="success" type="duotone"/>-->
-      <!--                }-->
-      <!--                @if (log.done === false) {-->
-      <!--                  <kep-icon name="cross-square" color="danger" type="duotone"/>-->
-      <!--                }-->
-      <!--              </span>-->
-      <!--            </ng-template>-->
-      <!--            <ng-template ngbPanelContent>-->
-      <!--              <div><kep-icon name="file-sheet" type="duotone"/>Log</div>-->
-      <!--              <pre *ngIf="log.log" [innerHTML]="log.log"></pre>-->
-      <!--            </ng-template>-->
-      <!--          </ngb-panel>-->
-      <!--        }-->
-      <!--      </ngb-accordion>-->
+    <div ngbAccordion class="accordion">
+      @for (log of logs.tasks; track log; let i = $index) {
+        <div ngbAccordionItem>
+          <h2 ngbAccordionHeader>
+            <button ngbAccordionButton>
+              <span class="me-2">
+                {{ log.taskNumber }}. {{ log.taskTitle }}
+              </span>
+              @if (log.done === true) {
+                <kep-icon name="check-square" color="success"/>
+              }
+              @if (log.done === false) {
+                <kep-icon name="cross-square" color="danger"/>
+              }
+            </button>
+          </h2>
+          <div ngbAccordionCollapse>
+            <div class="p-3">
+              <pre *ngIf="log.log" [innerHTML]="log.log"></pre>
+            </div>
+          </div>
+        </div>
+      }
     </div>
   </div>
 </ng-template>
