--- a/src/app/modules/projects/pages/project/project-attempts/project-attempts.component.html
+++ b/src/app/modules/projects/pages/project/project-attempts/project-attempts.component.html
@@ -1,7 +1,7 @@
 <div class="mb-1">
   @if (currentUser) {
-    <div class="custom-control custom-control-info custom-checkbox">
-      <input type="checkbox" class="form-check-input" [(ngModel)]="myAttempts" (change)="reloadPage()"
+    <div class="custom-control custom-control-info custom-checkbox d-flex align-items-center justify-content-start gap-1">
+      <input type="checkbox" class="form-check-input" [(ngModel)]="myAttempts" (change)="myAttemptsClick()"
              [ngModelOptions]="{standalone: true}" id="myAttempts"/>
       <label class="form-check-label" for="myAttempts">{{ 'MY_ATTEMPTS' | translate }}</label>
     </div>
