tournament-bracket ui change

--- a/src/app/modules/tournaments/tournament/tournament-duels/duel-card/duel-card.component.html
+++ b/src/app/modules/tournaments/tournament/tournament-duels/duel-card/duel-card.component.html
@@ -8,7 +8,7 @@
             <contestant-view [textColor]="'dark'" [user]="duel.playerFirst"></contestant-view>
           </td>
           <td class="text-end">
-            <span class="badge">
+            <span class="badge bg-primary">
               {{ duel.playerFirst.balls }}
             </span>
           </td>
@@ -23,7 +23,7 @@
             }
           </td>
           <td class="text-end">
-            <span class="badge">
+            <span class="badge bg-primary">
               {{ duel.playerSecond?.balls || 0 }}
             </span>
           </td>
