--- a/src/app/modules/tournaments/tournament/tournament-duels/duel-card/duel-card.component.scss
+++ b/src/app/modules/tournaments/tournament/tournament-duels/duel-card/duel-card.component.scss
@@ -1,26 +1,5 @@
-@import '../../../scss/variables.scss';
+@import 'styles/kep-imports';
 
-.card {
-  transition: all 0.2s ease;
-
-  &:hover {
-    transform: scale(1.02);
-    transition: 0.5s ease;
-  }
-
-  th,
-  td {
-    border-top: none;
-    padding-top: 1.15rem;
-    padding-bottom: 1.15rem;
-  }
-}
-
-.badge {
-  background-color: $tournaments-color;
-  box-shadow: 0 0 5px $tournaments-color;
-}
-
-::ng-deep .dark-layout .duel-card {
-  background: $tournaments-bg-dark !important;
+.duel-card {
+  background: mix(black, $primary, 90) !important;
 }
