--- a/src/app/modules/tournaments/tournament/tournament.component.html
+++ b/src/app/modules/tournaments/tournament/tournament.component.html
@@ -1,5 +1,5 @@
 <kep-card [@fadeInLeftOnEnter]>
-  <div class="card-header justify-content-start">
+  <div class="card-header p-2 justify-content-start">
     <div class="icon d-sm-block d-none">
       <img src="assets/images/icons/tournament.png" alt="tournament-icon" width="90" height="90">
     </div>
@@ -9,13 +9,13 @@
       </h3>
       <p class="text-white">{{ tournament.startTime | localizedDate:'MMM dd, yyyy' }}</p>
       @if (!tournament.isRegistered && canRegistration) {
-        <button (click)="registration()" class="btn btn-sm btn-registration">
+        <button (click)="registration()" class="btn btn-sm btn-primary">
           <i data-feather="user"></i> {{ 'Registration' | translate }}
         </button>
       }
       @if (tournament.isRegistered) {
-        <span class="badge bg-primary">
-          <i class="text-success" data-feather="check-circle"></i>
+        <span class="badge bg-primary font-small-2">
+          <i class="text-dark-emphasis" data-feather="check-circle"></i>
           {{ 'Registrated' | translate }}
         </span>
       }
@@ -29,7 +29,7 @@
   [@fadeInLeftOnEnter]
   ngbNav
   #navFilled="ngbNav"
-  class="nav-tabs nav-fill nav-tournament">
+  class="nav-tabs nav-style-1 nav-fill">
   <li ngbNavItem [ngbNavItem]="1">
     <a ngbNavLink>{{ 'Info' | translate }}</a>
     <ng-template ngbNavContent>
