--- a/src/app/modules/contests/components/contests-table/contests-table.component.html
+++ b/src/app/modules/contests/components/contests-table/contests-table.component.html
@@ -84,13 +84,12 @@
                   <i data-feather="users" class="font-medium-3"></i>
                 </div>
               </div>
-              <h5 class="fw-semibold">
-                <div
-                  class="badge contest-badge"
-                  [countUp]="contest.contestantsCount || contest.registrantsCount"
-                  [options]="{ duration: 5 }">
-                </div>
-              </h5>
+              <br>
+              <span
+                class="badge contest-badge"
+                [countUp]="contest.contestantsCount || contest.registrantsCount"
+                [options]="{ duration: 5 }">
+              </span>
             </td>
           </tr>
         }
