--- a/src/app/modules/duels/components/duel-countdown/duel-countdown.component.html
+++ b/src/app/modules/duels/components/duel-countdown/duel-countdown.component.html
@@ -1,4 +1,4 @@
-<kep-card>
+<kep-card [cardHeight]="'158px'">
   <div class="card-body mt-1">
     @if (duel.status == 0) {
       <h4 class="text-center text-white mb-1">
